--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-cm0lr221hbls73dc8q0g-a.oregon-postgres.render.com/fifteen_puzzle
-spring.datasource.username=fifteen_puzzle_user
-spring.datasource.password=8esd3JCVISmqt2xPUBZjAFzNAIfY7XOM
+spring.datasource.url=jdbc:postgresql://drona.db.elephantsql.com/xnxqdxqv
+spring.datasource.username=xnxqdxqv
+spring.datasource.password=OjllRJyqJepoHEZPkWthYAt4Lpo_nFfL
